frontend/recipes/src/styles/recipes.css
.topbar {
  display: flex;
  align-items: center;
  margin-bottom: 20px;
}

.input-search {
  flex: 1;
  padding: 10px;
  font-size: 16px;
  margin-right: 20px;
  border-radius: 5px;
  border: 1px solid #ccc;
}

.sorting-dropdown {
  padding: 10px;
  font-size: 16px;
  border-radius: 5px;
  border: 1px solid #ccc;
}

.AllRecipes {
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start; /* Align items to the left */
  gap: 20px; /* Space between cards */
  padding: 20px; /* Padding around the container */
}

.recipesh1,
.recipe-name {
  color: black;
  font-size: 36px;
}

.IndividualRecipe {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background-color: lightblue;
  padding: 20px;
  border-radius: 10px;
  transition: transform 0.3s ease, background-color 0.3s ease;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
}

.IndividualRecipe:hover {
  transform: scale(1.05);
}

.recipe-link {
  text-decoration: none;
  color: black;
  text-align: center;
}

.recipe-image {
  width: 350px;
  height: 350px;
  object-fit: cover;
  border-radius: 10px;
}

.bookmark-icon {
  margin-top: 10px;
}

/* Styles for star rating */
.star-rating {
  display: flex;
  align-items: center;
}

.star {
  width: 20px;
  height: 20px;
  margin-right: 5px;
  background-color: #FFD700;
  clip-path: polygon(
    50% 0%, 
    61% 35%, 
    98% 35%, 
    68% 57%, 
    79% 91%, 
    50% 70%, 
    21% 91%, 
    32% 57%, 
    2% 35%, 
    39% 35%
  );
}

.star.empty {
  background-color: #e0e0e0;
}

.star.quarter {
  background: linear-gradient(to right, #FFD700 35%, #e0e0e0 35%);
}

.star.half {
  background: linear-gradient(to right, #FFD700 50%, #e0e0e0 50%);
}

.star.three-quarter {
  background: linear-gradient(to right, #FFD700 65%, #e0e0e0 65%);
}

.rating {
  display: flex;
  align-items: center;
  justify-content: space-between; /* Ensures space between elements */
  width: 100%; /* Take full width of parent container */
  padding: 5px;
}

.rating-text {
  margin-left: 10px; /* Add some spacing between stars and text */
  font-size: 16px; /* Adjust font size as needed */
  color: #333; /* Adjust color as needed */
}

.number-of-reviews {
  margin-left: auto; /* Push the reviews count to the right */
  font-size: 14px; /* Adjust font size as needed */
  color: #666; /* Adjust color as needed */
}

.timer-image {
  width: 25px;
  height: 25px;
  object-fit: cover;
  border-radius: 5px;
}

.time-and-author {
  display: flex;
  align-items: center;
  justify-content: space-between; /* Ensures time on the left and author on the right */
  width: 100%; /* Ensure it takes the full width of the parent container */
}

.time-and-author p {
  margin: 0; /* Remove default margin for the paragraphs */
}

.time-and-author .author {
  margin-left: auto; /* Pushes the author to the right */
}

